2010-07-26  Raúl Mateos   <raulofpandora@gmail.com>

	* godmode/users/user_list.php: Added px to width to ease the change of
	profile edition to this page.

2010-07-26  Sergio Martin <sergio.martin@artica.es>

	* include/functions_db.php: Changed the priority of the
	status of agents and groups when get status from their 
	descendents

2010-07-26  Miguel de Dios  <miguel.dedios@artica.es>
	* include/functions_db.php: added into the function "get_group_icon" the
	return icon for "all" group.
	
	* godmode/groups/configure_group.php: fixed and cleaned source code, for
	the dinamic change of parent icon, show the select of parent with the
	parent selected, and fixed the position of parent icon image.
	Fixes: #3034677
	 
	* godmode/groups/group_list.php: changed the source code for to show the
	"all" group open branch by default.

2010-07-26  Sergio Martin <sergio.martin@artica.es>

	* include/functions_networkmap.php: Changed the color of the
	modules, agents and groups with alerts fired in the network 
	maps from yellow to orange.

2010-07-26  Miguel de Dios  <miguel.dedios@artica.es>
	* images/mimetypes/text.png: added lost image file in previous commits about
	collections.

	*images/tag_red.disabled.png, images/cross.disabled.png,
	images/chart_curve.disabled.png, images/config.disabled.png,
	images/chart_bar.disabled.png, images/photo.disabled.png,
	images/camera.disabled.png, images/binary.disabled.png: added image files
	for the new palete buttons (when it are disabled) in visual console editor.
	
	* include/styles/pandora.css: added the styles for the new buttons of
	visual console editor (label and icon), and some changes for new style for
	buttons of the palete in this page.
	
	* include/functions_html.php: in function "print_button" added new
	parameter $imageButton to set the button as image button, by default is
	false.
	
	* include/ajax/visual_console_builder.ajax.php,
	godmode/reporting/visual_console_builder.editor.js,